--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
   database:
-    container_name: mysql
+    container_name: dockerhub-ci-mysql
     image: mysql:8.0
     command: mysqld --default-authentication-plugin=mysql_native_password
     restart: always
@@ -14,10 +14,10 @@ services:
     ports:
       - 5001:5001
     networks:
-      - spring-boot-network
+      - dockerhub-ci-network
   spring-boot-api:
-    container_name: spring-boot-api
-    image: bladerunner9040/spring-boot-api-with-dockerhub-githubactions
+    container_name: dockerhub-ci-spring-boot-api
+    image: bladerunner9040/spring-boot-api-dockerhub-ci
     restart: always
     build:
       context: .
@@ -33,8 +33,8 @@ services:
     depends_on:
       - database
     networks:
-      - spring-boot-network
+      - dockerhub-ci-network
 networks:
-  spring-boot-network:
-    name: spring-boot-network
+  dockerhub-ci-network:
+    name: dockerhub-ci-network
     driver: bridge
