--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -40,7 +40,6 @@ jobs:
 
     - name: Push to Docker Hub Container Registry
       run: |
-        docker tag ${{secrets.DOCKER_USERNAME}}/spring-boot-api-dockerhub-ci:latest
-        docker tag ${{secrets.DOCKER_USERNAME}}/spring-boot-api-dockerhub-ci:${{github.run_id}}
-        docker push ${{secrets.DOCKER_USERNAME}}/spring-boot-api-dockerhub-ci:latest
+        docker tag ${{secrets.DOCKER_USERNAME}}/spring-boot-api-dockerhub-ci:latest ${{secrets.DOCKER_USERNAME}}/spring-boot-api-dockerhub-ci:${{github.run_id}}
         docker push ${{secrets.DOCKER_USERNAME}}/spring-boot-api-dockerhub-ci:${{github.run_id}}
+        docker push ${{secrets.DOCKER_USERNAME}}/spring-boot-api-dockerhub-ci:latest
